--- a/main.css
+++ b/main.css
@@ -1,10 +1,21 @@
+:root {
+  --star: 0px;
+  --final: 1px;
+  --backgra: white ;
+
+  /* #21232a  */
+  
+}
+
+
+
 *
 {
     margin: 0;
     padding: 0;
     color: white;
     font-family: 'Montserrat', sans-serif;
-    background-color: #21232a ;
+    background-color: #21232a;
 }
 
 /* html,
@@ -19,6 +30,8 @@ body
 {
     overflow: hidden;
 }
+
+
 
 #logo{
   position: absolute;
@@ -56,6 +69,7 @@ min-height: 100vh;
     height: 100%;
     max-width: 100%;
     min-height: 50vh;
+    background-color: var(--backgra);
     
     
     /* height:100%;
@@ -70,15 +84,26 @@ min-height: 100vh;
     height: 100%;
 }
 
+.color{
+  margin-top: 5px;
+    z-index: 2;
+    
+    
+    width: 100%;
+    height: 35px;
+}
 
 
 .slider {
     margin-top: 5px;
     z-index: 2;
     
-    -webkit-appearance: none;
-    width: 100%;
+    
+    width: 80%;
     height: 3px;
+
+
+    -webkit-appearance: none;
     background: #d3d3d3;
     outline: none;
     opacity: 0.7;
@@ -122,6 +147,7 @@ min-height: 100vh;
    padding-bottom: 50px;
    padding-top: 30px;
    margin-right: 200px;
+   margin-left: 17px;
     width: 80%;
 
     margin-top: 7vh;
@@ -130,7 +156,9 @@ min-height: 100vh;
     border-width:2px;
     border-style:solid;
     border-radius: 8px;
-    border-color: #d3d3d3
+    border-color: #d3d3d3;
+    
+    
   }
 
 
